--- a/docs/translations/api-docs/slider/slider.json
+++ b/docs/translations/api-docs/slider/slider.json
@@ -87,23 +87,6 @@
       "nodeName": "the thumb element",
       "conditions": "keyboard focused"
     },
-    "valueLabel": {
-      "description": "Class name applied to {{nodeName}}.",
-      "nodeName": "the thumb label element"
-    },
-    "valueLabelOpen": {
-      "description": "Class name applied to {{nodeName}} if {{conditions}}.",
-      "nodeName": "the thumb label element",
-      "conditions": "it's open"
-    },
-    "valueLabelCircle": {
-      "description": "Class name applied to {{nodeName}}.",
-      "nodeName": "the thumb label's circle element"
-    },
-    "valueLabelLabel": {
-      "description": "Class name applied to {{nodeName}}.",
-      "nodeName": "the thumb label's label element"
-    },
     "mark": {
       "description": "Class name applied to {{nodeName}}.",
       "nodeName": "the mark element"
@@ -137,6 +120,11 @@
       "nodeName": "the root element",
       "conditions": "<code>size=\"small\"</code>"
     },
+    "sizeMedium": {
+      "description": "Class name applied to {{nodeName}} if {{conditions}}.",
+      "nodeName": "the root element",
+      "conditions": "<code>size=\"medium\"</code>"
+    },
     "thumbColorPrimary": {
       "description": "Class name applied to {{nodeName}} if {{conditions}}.",
       "nodeName": "the thumb element",
@@ -151,6 +139,28 @@
       "description": "Class name applied to {{nodeName}} if {{conditions}}.",
       "nodeName": "the thumb element",
       "conditions": "<code>size=\"small\"</code>"
+    },
+    "thumbSizeMedium": {
+      "description": "Class name applied to {{nodeName}} if {{conditions}}.",
+      "nodeName": "the thumb element",
+      "conditions": "<code>size=\"medium\"</code>"
+    },
+    "valueLabel": {
+      "description": "Class name applied to {{nodeName}}.",
+      "nodeName": "the thumb label element"
+    },
+    "valueLabelOpen": {
+      "description": "Class name applied to {{nodeName}} if {{conditions}}.",
+      "nodeName": "the thumb label element",
+      "conditions": "it's open"
+    },
+    "valueLabelCircle": {
+      "description": "Class name applied to {{nodeName}}.",
+      "nodeName": "the thumb label's circle element"
+    },
+    "valueLabelLabel": {
+      "description": "Class name applied to {{nodeName}}.",
+      "nodeName": "the thumb label's label element"
     }
   }
 }
