--- a/docs/translations/translations.json
+++ b/docs/translations/translations.json
@@ -227,7 +227,7 @@
     "/base/react-popper": "Popper",
     "/base/react-portal": "Portal",
     "/base/react-textarea-autosize": "Textarea Autosize",
-    "/base/guides": "How To Guides",
+    "/base/guides": "How-to guides",
     "/base/guides/working-with-tailwind-css": "Working with Tailwind CSS",
     "/material-ui/getting-started": "Getting started",
     "/material-ui/getting-started/overview": "Overview",
@@ -308,7 +308,7 @@
     "/material-ui/about-the-lab": "About the lab 🧪",
     "/material-ui/react-masonry": "Masonry",
     "/material-ui/react-timeline": "Timeline",
-    "/material-ui/react-tree-view": "Tree view",
+    "/material-ui/react-tree-view": "Tree View",
     "/material-ui/customization": "Customization",
     "/material-ui/customization/theme": "Theme",
     "/material-ui/customization/theming": "Theming",
@@ -324,7 +324,7 @@
     "/material-ui/customization/default-theme": "Default theme",
     "/material-ui/customization/how-to-customize": "How to customize",
     "/material-ui/customization/color": "Color",
-    "/material-ui/guides": "How To Guides",
+    "/material-ui/guides": "How-to guides",
     "/material-ui/guides/understand-mui-packages": "Understand MUI packages",
     "/material-ui/guides/typescript": "TypeScript",
     "/material-ui/guides/interoperability": "Style library interoperability",
