--- a/docs/translations/api-docs/list/list.json
+++ b/docs/translations/api-docs/list/list.json
@@ -6,7 +6,7 @@
     "component": "The component used for the root node. Either a string to use a HTML element or a component.",
     "dense": "If <code>true</code>, compact vertical padding designed for keyboard and mouse input is used for the list and list items. The prop is available to descendant components as the <code>dense</code> context.",
     "disablePadding": "If <code>true</code>, vertical padding is removed from the list.",
-    "divider": "An element to be inserted between each item, but not at the top or bottom.",
+    "divider": "Custom component to add separator between childs.",
     "subheader": "The content of the subheader, normally <code>ListSubheader</code>.",
     "sx": "The system prop that allows defining system overrides as well as additional CSS styles. See the <a href=\"/system/getting-started/the-sx-prop/\">`sx` page</a> for more details."
   },
