--- a/docs/translations/api-docs/input-unstyled/input-unstyled.json
+++ b/docs/translations/api-docs/input-unstyled/input-unstyled.json
@@ -10,6 +10,7 @@
     "endAdornment": "Trailing adornment for this input.",
     "error": "If <code>true</code>, the <code>input</code> will indicate an error by setting the <code>aria-invalid</code> attribute on the input and the <code>Mui-error</code> class on the root element. The prop defaults to the value (<code>false</code>) inherited from the parent FormControl component.",
     "id": "The id of the <code>input</code> element.",
+    "inputRef": "Pass a ref to the <code>input</code> element.",
     "maxRows": "Maximum number of rows to display when multiline option is set to true.",
     "minRows": "Minimum number of rows to display when multiline option is set to true.",
     "multiline": "If <code>true</code>, a <code>textarea</code> element is rendered.",
